# torizon-spi-loopback

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile.sdk  README.md  docker-compose.yml
.conf/: apply-ci-settings-file.xsh  check-ci-env.xsh  check-deps.xsh  ci-vars.json  compose-rules.json  compose-rules.xsh  create-docker-compose-production.xsh  docker-login.xsh  metadata.json  project-updater.xsh  repo-vars.json  run-container-if-not-exists.xsh  service-check.xsh  share-wsl-ports.xsh  spin-up-down-registry.xsh  torizon-io.xsh  torizon-packages.xsh  validate-deps-running.xsh  validate-json.xsh
.github/workflows/: build-application.yaml
includes/: spi_device.hpp
src/: main.cpp  spi_device.cpp
